--- a/src/package.json
+++ b/src/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "basscss": "^8.0.2",
+    "enumify": "^1.0.4",
     "history": "3.3.0",
     "react": "15.4.2",
     "react-crouton": "^0.3.0",
