--- a/src/package.json
+++ b/src/package.json
@@ -21,6 +21,7 @@
     "react-router": "3.0.0",
     "react-router-redux": "4.0.7",
     "react-spinkit": "^3.0.0",
+    "react-svg": "^2.1.21",
     "redux": "3.6.0",
     "redux-observable": "0.12.2",
     "rxjs": "5.0.3",
