--- a/src/package.json
+++ b/src/package.json
@@ -10,27 +10,25 @@
   "author": "MirskyTech",
   "private": true,
   "dependencies": {
+    "antd": "^2.11.1",
     "basscss": "^8.0.2",
     "enumify": "^1.0.4",
     "history": "3.3.0",
     "react": "15.4.2",
     "react-crouton": "^0.3.0",
     "react-dom": "15.4.2",
-    "react-lightweight-tooltip": "^0.0.4",
     "react-redux": "4.4.6",
     "react-router": "3.0.0",
     "react-router-redux": "4.0.7",
-    "react-spinkit": "^3.0.0",
     "react-svg": "^2.1.21",
     "redux": "3.6.0",
     "redux-observable": "0.12.2",
-    "rxjs": "5.0.3",
-    "semantic-ui-css": "^2.2.10",
-    "semantic-ui-react": "^0.68.5"
+    "rxjs": "5.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.8",
+    "babel-plugin-import": "^1.2.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
@@ -43,10 +41,11 @@
     "image-webpack-loader": "^3.3.1",
     "node-sass": "^4.5.2",
     "sass-loader": "^6.0.5",
-    "semantic-ui": "^2.2.10",
     "style-loader": "^0.17.0",
     "url-loader": "^0.5.8",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.2.0"
-  }
+  },
+  "repository": "http://github.com/mirskytech/octocnc",
+  "license": "MIT"
 }
