--- a/src/package.json
+++ b/src/package.json
@@ -11,9 +11,14 @@
   "private": true,
   "dependencies": {
     "antd": "^2.11.1",
+    "autoprefixer": "^7.1.1",
     "basscss": "^8.0.2",
     "enumify": "^1.0.4",
     "history": "3.3.0",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.4",
+    "postcss-flexbugs-fixes": "^3.0.0",
+    "postcss-loader": "^2.0.6",
     "react": "15.4.2",
     "react-crouton": "^0.3.0",
     "react-dom": "15.4.2",
@@ -47,5 +52,8 @@
     "webpack-dev-server": "^2.2.0"
   },
   "repository": "http://github.com/mirskytech/octocnc",
-  "license": "MIT"
+  "license": "MIT",
+  "theme": {
+    "primary-color": "#1DA57A"
+  }
 }
