--- a/src/package.json
+++ b/src/package.json
@@ -14,14 +14,18 @@
     "autoprefixer": "^7.1.1",
     "basscss": "^8.0.2",
     "enumify": "^1.0.4",
+    "font-awesome": "^4.7.0",
     "history": "3.3.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
     "postcss-flexbugs-fixes": "^3.0.0",
     "postcss-loader": "^2.0.6",
+    "prop-types": "^15.5.10",
     "react": "15.4.2",
     "react-crouton": "^0.3.0",
+    "react-custom-scroll": "^2.0.0",
     "react-dom": "15.4.2",
+    "react-fontawesome": "^1.6.1",
     "react-redux": "4.4.6",
     "react-router": "3.0.0",
     "react-router-redux": "4.0.7",
@@ -39,10 +43,11 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-es2016": "^6.16.0",
     "babel-preset-es2017": "^6.16.0",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.16.0",
     "css-loader": "^0.28.1",
     "file-loader": "^0.11.2",
-    "flow-bin": "^0.38.0",
+    "flow-bin": "^0.48.0",
     "image-webpack-loader": "^3.3.1",
     "node-sass": "^4.5.2",
     "sass-loader": "^6.0.5",
