--- a/src/package.json
+++ b/src/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^7.1.1",
     "basscss": "^8.0.2",
     "enumify": "^1.0.4",
+    "extended-proptypes": "^1.3.0",
     "font-awesome": "^4.7.0",
     "history": "3.3.0",
     "less": "^2.7.2",
@@ -31,8 +32,9 @@
     "react-router-redux": "4.0.7",
     "react-svg": "^2.1.21",
     "redux": "3.6.0",
-    "redux-observable": "0.12.2",
-    "rxjs": "5.0.3"
+    "redux-observable": "^0.15.0",
+    "rxjs": "^5.4.3",
+    "yarn": "^0.27.5"
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
