--- a/src/package.json
+++ b/src/package.json
@@ -19,6 +19,7 @@
     "history": "3.3.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
+    "moment": "^2.18.1",
     "postcss-flexbugs-fixes": "^3.0.0",
     "postcss-loader": "^2.0.6",
     "prop-types": "^15.5.10",
@@ -27,6 +28,7 @@
     "react-custom-scroll": "^2.0.0",
     "react-dom": "15.4.2",
     "react-fontawesome": "^1.6.1",
+    "react-moment": "^0.6.1",
     "react-redux": "4.4.6",
     "react-router": "3.0.0",
     "react-router-redux": "4.0.7",
