--- a/src/package.json
+++ b/src/package.json
@@ -16,22 +16,22 @@
     "enumify": "^1.0.4",
     "extended-proptypes": "^1.3.0",
     "font-awesome": "^4.7.0",
-    "history": "3.3.0",
+    "history": "^4.6.3",
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
     "moment": "^2.18.1",
     "postcss-flexbugs-fixes": "^3.0.0",
     "postcss-loader": "^2.0.6",
     "prop-types": "^15.5.10",
-    "react": "15.4.2",
+    "react": "^15.6.1",
     "react-crouton": "^0.3.0",
     "react-custom-scroll": "^2.0.0",
-    "react-dom": "15.4.2",
+    "react-dom": "^15.6.1",
     "react-fontawesome": "^1.6.1",
     "react-moment": "^0.6.1",
     "react-redux": "4.4.6",
-    "react-router": "3.0.0",
-    "react-router-redux": "4.0.7",
+    "react-router-dom": "^4.1.2",
+    "react-router-redux": "next",
     "react-svg": "^2.1.21",
     "redux": "3.6.0",
     "redux-observable": "^0.15.0",
