--- a/src/package.json
+++ b/src/package.json
@@ -35,6 +35,7 @@
     "react-svg": "^2.1.21",
     "redux": "3.6.0",
     "redux-observable": "^0.15.0",
+    "reselect": "^3.0.1",
     "rxjs": "^5.4.3",
     "yarn": "^0.27.5"
   },
