--- a/src/package.json
+++ b/src/package.json
@@ -13,6 +13,7 @@
     "antd": "^2.11.1",
     "autoprefixer": "^7.1.1",
     "basscss": "^8.0.2",
+    "basscss-utility-typography": "^2.1.0",
     "enumify": "^1.0.4",
     "extended-proptypes": "^1.3.0",
     "font-awesome": "^4.7.0",
