--- a/app/package.json
+++ b/app/package.json
@@ -4,12 +4,24 @@
   "description": "",
   "main": "theme.js",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
+    "antd": "^3.26.4",
     "babel-preset-react": "^6.24.1",
+    "basscss": "^8.1.0",
+    "enumify": "^1.0.4",
+    "extended-proptypes": "^1.3.0",
     "react": "^16.12.0",
+    "react-custom-scroll": "^4.1.5",
     "react-dom": "^16.12.0",
+    "react-moment": "^0.9.7",
     "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
+    "react-svg": "^11.0.5",
     "redux": "^4.0.5",
     "redux-observable": "^1.2.0",
+    "reselect": "^4.0.0",
     "rxjs": "^6.5.3",
     "webpack": "^4.41.4",
     "webpack-cli": "^3.3.10"
@@ -20,7 +32,12 @@
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-flow": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
-    "babel-loader": "^8.0.6"
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.0",
+    "file-loader": "^5.0.2",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.1.2"
   },
   "scripts": {
     "build": "webpack --mode production",
