--- a/app/package.json
+++ b/app/package.json
@@ -40,7 +40,7 @@
     "style-loader": "^1.1.2"
   },
   "scripts": {
-    "build": "webpack --mode production",
+    "build": "webpack --mode development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
