--- a/app/package.json
+++ b/app/package.json
@@ -41,6 +41,7 @@
   },
   "scripts": {
     "build": "webpack --mode development",
+    "watch": "webpack --mode development --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
