--- a/.editorconfig
+++ b/.editorconfig
@@ -1,6 +1,3 @@
-# This file is for unifying the coding style for different editors and IDEs
-# editorconfig.org
-
 root = true
 
 [*]
@@ -10,7 +7,8 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 
 [**.py]
-indent_style = tab
+indent_style = space
+indent_size = 4
 
 [**.js]
 indent_style = space
