--- a/app/package.json
+++ b/app/package.json
@@ -20,10 +20,12 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-svg": "^11.0.5",
+    "react-three-fiber": "^4.0.18",
     "redux": "^4.0.5",
     "redux-observable": "^1.2.0",
     "reselect": "^4.0.0",
     "rxjs": "^6.5.3",
+    "three": "^0.113.2",
     "webpack": "^4.41.4",
     "webpack-cli": "^3.3.10"
   },
