--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,8 @@
     "antd": "^3.26.4",
     "babel-preset-react": "^6.24.1",
     "basscss": "^8.1.0",
+    "bytes": "^3.1.0",
+    "crypto-js": "^4.0.0",
     "decimal.js": "^10.2.0",
     "enumify": "^1.0.4",
     "extended-proptypes": "^1.3.0",
