--- a/app/package.json
+++ b/app/package.json
@@ -4,14 +4,17 @@
   "description": "",
   "main": "theme.js",
   "dependencies": {
+    "@ant-design/compatible": "^1.0.1",
+    "@ant-design/icons": "^4.0.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
-    "antd": "^3.26.4",
+    "antd": "^4.0.1",
     "babel-preset-react": "^6.24.1",
     "basscss": "^8.1.0",
     "bytes": "^3.1.0",
     "crypto-js": "^4.0.0",
+    "dayjs": "^1.8.21",
     "decimal.js": "^10.2.0",
     "enumify": "^1.0.4",
     "extended-proptypes": "^1.3.0",
