--- a/app/package.json
+++ b/app/package.json
@@ -25,12 +25,13 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-svg": "^11.0.5",
-    "react-three-fiber": "^4.0.18",
+    "react-three-fiber": "^4.0.20",
     "redux": "^4.0.5",
     "redux-observable": "^1.2.0",
     "reselect": "^4.0.0",
     "rxjs": "^6.5.3",
     "three": "^0.113.2",
+    "threejs-meshline": "^2.0.10",
     "webpack": "^4.41.4",
     "webpack-cli": "^3.3.10"
   },
@@ -40,6 +41,7 @@
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-flow": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
+    "@svgr/webpack": "^5.2.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.0",
     "file-loader": "^5.0.2",
