--- a/app/package.json
+++ b/app/package.json
@@ -39,16 +39,24 @@
     "@babel/preset-flow": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
     "babel-loader": "^8.0.6",
+    "babel-plugin-import": "^1.13.0",
+    "compression-webpack-plugin": "^3.1.0",
     "css-loader": "^3.4.0",
     "file-loader": "^5.0.2",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
     "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
-    "style-loader": "^1.1.2"
+    "style-loader": "^1.1.2",
+    "webpack-bundle-analyzer": "^3.6.1",
+    "webpack-merge": "^4.2.2"
   },
   "scripts": {
-    "build": "webpack --mode development",
-    "watch": "webpack --mode development --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --config webpack.prod.js",
+    "watch": "webpack --config webpack.dev.js --watch",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "analyze": "webpack --config webpack.analyze.js",
+    "profile": "webpack --config webpack.prod.js --profile --json > stats.json"
   },
   "keywords": [],
   "author": "",
