--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "decimal.js": "^10.2.0",
     "enumify": "^1.0.4",
     "extended-proptypes": "^1.3.0",
+    "immutable": "^4.0.0-rc.12",
     "react": "^16.12.0",
     "react-custom-scroll": "^4.1.5",
     "react-dom": "^16.12.0",
